add_subdirectory(okvis_util)
add_subdirectory(okvis_kinematics)
add_subdirectory(okvis_time)
add_subdirectory(okvis_cv)
add_subdirectory(okvis_common)
add_subdirectory(okvis_ceres)
add_subdirectory(okvis_timing)
add_subdirectory(okvis_matcher)
add_subdirectory(okvis_frontend)
add_subdirectory(okvis_multisensor_processing)
